tests/baselines/reference/parser512097.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512097.ts(1,14): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512097.ts (1 errors) ====
    var tt = { aa; } // After this point, no useful parsing occurs in the entire file
                 ~
!!! error TS1005: ':' expected.
    
    if (true) {
    }